--- a/Gioco dadi/index.html
+++ b/Gioco dadi/index.html
@@ -5,14 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
+
   <body>
+    <div class="d-flex margin_auto space-around">
+      <div class="mt_200">
+        <h3 id="risultato_mio"></h3>
+        <button type="button" name="button" id="generatore_mio">Lancia il mio dado</button>
+        <h2 id="numero_mio"></h2>
+      </div>
 
-
+      <div class="mt_200">
+        <h3 id="risultato_bot"></h3>
+        <button type="button" name="button" id="generatore_bot">Lancia il dado del Bot</button>
+        <h2 id="numero_bot"></h2>
+      </div>
+    </div>
 
 
     <script type="text/javascript" src="assets/js/main.js">
-
     </script>
   </body>
 </html>
