finito anche esercizio dadi

--- a/Gioco dadi/index.html
+++ b/Gioco dadi/index.html
@@ -21,6 +21,12 @@
         <button type="button" name="button" id="generatore_bot">Lancia il dado del Bot</button>
         <h2 id="numero_bot"></h2>
       </div>
+
+      <div class="mt_200">
+        <h3 id="risultato_finale"></h3>
+        <button type="button" name="button" id="generatore_finale">ottieni risultato</button>
+        <h2 id="numero_finale"></h2>
+      </div>
     </div>
 
 
